# DevQuickSetup

./: .gitignore
win_quick_setup/: Cargo.toml
win_quick_setup/resources/: Cross_Editors.json  General.json  MSVC_C++.json  Python.json  Rust.json  VMs.json  WIN_Editors.json  WIN_General.json  WebDev.json  Websites_Tools.json
win_quick_setup/src/: commands.rs  executor_factory.rs  main.rs  rendering.rs
win_quick_setup/src/commands/: common.rs  conditional_command.rs  delete_reg_key_command.rs  dir_command.rs  exec_command.rs  get_reg_value_command.rs  include_command.rs  paralel_exec_command.rs  ps1_command.rs  set_reg_value_command.rs  set_var_command.rs  update_reg_value_command.rs  update_registry_command.rs  vcpkg_command.rs  winget_command.rs
