[package]
name = "win_quick_setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.171"
serde_derive = "1.0.171"
serde_json = "1.0.102"
winreg = "0.7.0"
shell-words = "0.1"
lazy_static = "1.4"
regex = "1.5"
tokio = {version = "0.2.*", features = ["full"] }
async-trait = "0.1"